--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "atom.io": "0.6.1",
+    "nanoid": "4.0.2",
     "preact": "^10.15.1"
   },
   "devDependencies": {
